Bug 476719 - "Add to Favorites" menu item missing in context menu of search result delegates
Summary: "Add to Favorites" menu item missing in context menu of search result delegates
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 477300 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-08 19:26 UTC by Nate Graham
Modified: 2023-11-30 16:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-11-08 19:26:55 UTC
Everything from today's git master Plasma 6 Wayland.

STEPS TO REPRODUCE
1. Open Kickoff
2. Search for "Dolphin"
3. Right-click on the search result for the Dolphin app

OBSERVED RESULT
There's no menu item "Add to Favorites" (or "Remove from Favorites", if it's already a favorite)

EXPECTED RESULT
There is a menu item for "Add to Favorites"
Comment 1 Andreas G 2023-11-20 22:18:27 UTC
*** Bug 477300 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2023-11-21 16:34:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3579
Comment 3 Bug Janitor Service 2023-11-21 16:35:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1859
Comment 4 Nate Graham 2023-11-30 15:58:48 UTC
Git commit f295d43d4af47d89ebf1a74c06bf74405f6ae428 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 30/11/2023 at 16:58.
Pushed by ngraham into branch 'master'.

applets/kicker: Handle `undefined` values of favoritesModel/favoriteId correctly

Prevents spurious "Add to Favorites" items from showing up in the context menus
of things that can't actually be favorited.

To be applied with https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3559.

M  +1    -1    applets/kicker/package/contents/ui/code/tools.js

https://invent.kde.org/plasma/plasma-desktop/-/commit/f295d43d4af47d89ebf1a74c06bf74405f6ae428
Comment 5 Nate Graham 2023-11-30 16:17:02 UTC
Git commit 6b499a743cadc0bae97509a97cf4aaef69cced82 by Nate Graham, on behalf of Kai Uwe Broulik.
Committed on 30/11/2023 at 17:16.
Pushed by ngraham into branch 'master'.

kicker: Forward favoritesModel to RunnerMatchesModel

Kickoff uses the model's favoritesModel in the delegate to add/remove
favorites. RunnerModel has it but the individual RunnerMatchesModel
it displays did not, breaking the favorites functionality in
Kickoff's search.

M  +13   -0    applets/kicker/plugin/runnermatchesmodel.cpp
M  +9    -0    applets/kicker/plugin/runnermatchesmodel.h
M  +8    -1    applets/kicker/plugin/runnermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6b499a743cadc0bae97509a97cf4aaef69cced82