RunnerMatchesModel: Add favoritesModel property

BUG: 476719